@@ -1,0 +1,8 @@
+package HTML::Forms::I18N::en;
+
+use strictures;
+use parent 'HTML::Forms::I18N';
+
+our %Lexicon = ( '_AUTO' => 1, );
+
+1;
