@@ -68,9 +68,9 @@ form.classic {
         input:focus, textarea:focus {
             background: #colours[active-field];
         }
-        input[type=date], input[type=password], input[type=text],
-        select.select-multiple option {
-            padding: 0.25rem;
+        input[type=date], input[type=email], input[type=password],
+        input[type=text], select.select-multiple option {
+            padding: 0.125rem 0.25rem;
         }
         input[type=submit] {
             font-family: #fonts[system]; font-size: 0.8rem;
